2012-05-08  Bean  <bean123ch@gmail.com>

	* grub-core/net/ip.c (reassemble): Make asm_buffer into asm_netbuff.
	All users updated.
	(free_rsm): Free header as well.
	(free_old_fragments): Fix memory leak.
	* grub-core/net/netbuff.c (grub_netbuff_free): Make return void.
	* grub-core/net/tftp.c (tftp_receive): Fix memory leak.
	(destroy_pq): Likewise.
	* include/grub/net/netbuff.h (grub_netbuff_free): Make return void.

2012-05-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/hashsum.c (grub_cmd_hashsum): Align space for
	resulting hash as a precaution.

2012-05-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/bootp.c (set_env_limn_ro): Replace reserved ':' with
	'_' in variable names.
	* grub-core/net/net.c (grub_net_network_level_interface_register):
	Likewise.

2012-05-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix AFFS with non-512B blocks.

	* grub-core/fs/affs.c (grub_affs_rblock): Make type uint32_t.
	(AFFS_MAX_LOG_BLOCK_SIZE): New definition.
	(grub_affs_data): Replace blocksize with log_blocksize.
	(grub_affs_read_block): Fix non-512B blocks.
	(grub_affs_read_symlink): Likewise.
	(grub_affs_iterate_dir): Likewise. Fix freeing corruption.
	(grub_affs_read): Fix non-512B blocks.
	(grub_affs_label): Likewise.
	(grub_affs_mtime): Likewise.
	(grub_affs_mount): Fix block detection routine.

2012-05-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Add filesystem mtime to AFFS.

	* grub-core/fs/affs.c (grub_affs_file): Make type unsigned.
	(aftime2ctime): New function.
	(grub_affs_dir): Use aftime2ctime.
	(grub_affs_label): Fix return value.
	(grub_affs_mtime): New function.
	(grub_affs_fs): Add mtime.

2012-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/affs.c (grub_affs_read_symlink): Convert latin1 into
	UTF-8.

2012-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/sfs.c (grub_sfs_read_symlink): Convert latin1 into
	UTF-8.

2012-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
